fix: change wrap property for header style

--- a/shelter/style.css
+++ b/shelter/style.css
@@ -25,6 +25,7 @@ main {
 header {
 	margin: 0 40px;
 	display: flex;
+	flex-wrap: nowrap;
 }
 
 .container {
